--- a/eSonicEcm/src/main/resources/templates/main.html
+++ b/eSonicEcm/src/main/resources/templates/main.html
@@ -74,18 +74,7 @@
                     </div>
                 </div>
             </main>
-            <footer class="py-4 bg-light mt-auto">
-                <div class="container-fluid px-4">
-                    <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Your Website 2023</div>
-                        <div>
-                            <a href="#">Privacy Policy</a>
-                            &middot;
-                            <a href="#">Terms &amp; Conditions</a>
-                        </div>
-                    </div>
-                </div>
-            </footer>
+            <th:block th:replace="common/footer.html"></th:block>
         </div>
     </div>
     <th:block th:replace="common/includeJs.html"></th:block>
