--- a/eSonicEcm/src/main/resources/templates/common/includeJs.html
+++ b/eSonicEcm/src/main/resources/templates/common/includeJs.html
@@ -1,14 +1,15 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
-<script th:src="@{/js/chart-area-demo.js}"></script>
-<script th:src="@{/js/chart-bar-demo.js}"></script>
-<!--<script th:src="@{/js/jquery-migrate-3.0.1.min.js}"></script>-->
-<!--<script th:src="@{/js/jquery.easing.1.3.js}"></script>-->
-<!--<script th:src="@{/js/jquery.waypoints.min.js}"></script>-->
-<!--<script th:src="@{/js/jquery.stellar.min.js}"></script>-->
-<!--<script th:src="@{/js/jquery.magnific-popup.min.js}"></script>-->
-<!--<script th:src="@{/js/jquery.animateNumber.min.js}"></script>-->
-<!--<script th:src="@{/js/event.js}"></script>-->
-<script th:src="@{/js/scripts.js}"></script>
-<script th:src="@{/js/datatables-simple-demo.js}"></script>
+<script src="/js/chart-area-demo.js"></script>
+<script src="/js/chart-bar-demo.js"></script>
+<script src="/js/jquery-migrate-3.0.1.min.js"></script>
+<!--<script src="/js/jquery.easing.1.3.js"></script>-->
+<!--<script src="/js/jquery.waypoints.min.js"></script>-->
+<!--<script src="/js/jquery.stellar.min.js"></script>-->
+<!--<script src="/js/jquery.magnific-popup.min.js"></script>-->
+<!--<script src="/js/jquery.animateNumber.min.js"></script>-->
+<!--<script src="/js/bootstrap.min.js"></script>-->
+<!--<script src="/js/event.js"></script>-->
+<script src="/js/scripts.js"></script>
+<script src="/js/datatables-simple-demo.js"></script>
