--- a/eSonicEcm/src/main/resources/templates/common/includeJs.html
+++ b/eSonicEcm/src/main/resources/templates/common/includeJs.html
@@ -4,12 +4,12 @@
 <script src="/js/chart-area-demo.js"></script>
 <script src="/js/chart-bar-demo.js"></script>
 <script src="/js/jquery-migrate-3.0.1.min.js"></script>
-<!--<script src="/js/jquery.easing.1.3.js"></script>-->
-<!--<script src="/js/jquery.waypoints.min.js"></script>-->
-<!--<script src="/js/jquery.stellar.min.js"></script>-->
-<!--<script src="/js/jquery.magnific-popup.min.js"></script>-->
-<!--<script src="/js/jquery.animateNumber.min.js"></script>-->
-<!--<script src="/js/bootstrap.min.js"></script>-->
-<!--<script src="/js/event.js"></script>-->
+<script src="/js/jquery.easing.1.3.js"></script>
+<script src="/js/jquery.waypoints.min.js"></script>
+<script src="/js/jquery.stellar.min.js"></script>
+<script src="/js/jquery.magnific-popup.min.js"></script>
+<script src="/js/jquery.animateNumber.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/event.js"></script>
 <script src="/js/scripts.js"></script>
 <script src="/js/datatables-simple-demo.js"></script>
