--- a/eSonicEcm/src/main/resources/templates/common/header.html
+++ b/eSonicEcm/src/main/resources/templates/common/header.html
@@ -1,6 +1,6 @@
 <head>
 	<meta charset="UTF-8" />
-	<title>유저관리 페이지</title>
+	<title>EDMS 관리자 페이지</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
