--- a/eSonicEcm/src/main/resources/templates/common/includeJs.html
+++ b/eSonicEcm/src/main/resources/templates/common/includeJs.html
@@ -3,6 +3,7 @@
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
 <script src="/js/chart-area-demo.js"></script>
 <script src="/js/chart-bar-demo.js"></script>
+<script src="/js/chart-pie-demo.js"></script>
 <script src="/js/jquery-migrate-3.0.1.min.js"></script>
 <script src="/js/jquery.easing.1.3.js"></script>
 <script src="/js/jquery.waypoints.min.js"></script>
