--- a/eSonicEcm/src/main/resources/templates/dashboard/charts.html
+++ b/eSonicEcm/src/main/resources/templates/dashboard/charts.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xl-6">
+    <div class="col-xl-4">
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-chart-area me-1"></i>
@@ -8,13 +8,22 @@
             <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
         </div>
     </div>
-    <div class="col-xl-6">
+    <div class="col-xl-4">
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-chart-bar me-1"></i>
                 Bar Chart Example
             </div>
             <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+        </div>
+    </div>
+    <div class="col-xl-4">
+        <div class="card mb-4">
+            <div class="card-header">
+                <i class="fas fa-chart-bar me-1"></i>
+                Bar Chart Example
+            </div>
+            <div class="card-body"><canvas id="myPieChart" width="100%" height="40"></canvas></div>
         </div>
     </div>
 </div>
