--- a/eSonicEcm/src/main/resources/templates/main.html
+++ b/eSonicEcm/src/main/resources/templates/main.html
@@ -84,4 +84,7 @@
     </div>
 </body>
 <th:block th:replace="~{common/includeJs.html}"></th:block>
+<script src="/js/chart-area-demo.js"></script>
+<script src="/js/chart-bar-demo.js"></script>
+<script src="/js/chart-pie-demo.js"></script>
 </html>
